# EEG_analysis

./: .gitignore  CONTRIBUTING.md  LICENSE_TEMPLATE.md  MKDOCS_TEMPLATE.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  DIAGRAMS.md  FILE_CONTRACTS.md  FUNCTION_CATALOG.md  METHODS.md  NOTEBOOK_MIGRATION_GUIDE.md  VARIABLE_REGISTRY.md
docs/api/: auto_windowing.md  batch.md  causality.md  classification.md  config.md  environment.md  group_analysis.md  helpers.md  main.md  preprocessing.md  visualization.md
docs/diagrams/: data_variable_flow_graph.mmd  function_call_graph.mmd  module_dependency_graph.mmd  pipeline_flow.mmd
docs/guides/: DOCS_WRITING_GUIDE.md  GITHUB_SETUP_GUIDE.md
scripts/: generate_call_graph.py
src/eeg_causal/: __init__.py  auto_windowing.py  batch.py  causality.py  classification.py  config.py  environment.py  group_analysis.py  helpers.py  main.py  preprocessing.py  visualization.py
tests/: README.md
