[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-causal-connectivity"
version = "0.1.0"
description = "EEG causal connectivity scaffold refactored from a notebook"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Replace Me" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
